--- a/LeetClone/package.json
+++ b/LeetClone/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/vite": "^4.1.8",
     "@toolpad/core": "^0.16.0",
     "@uiw/react-split": "^5.9.3",
+    "axios": "^1.10.0",
     "firebase": "^11.9.1",
     "react": "^19.1.0",
     "react-circular-progressbar": "^2.2.0",
