--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,21 @@ version: '3.9'
 volumes:
   judge_temp_data:
 services:
+    # frontend:
+    #     build: 
+    #         context: .
+    #         dockerfile: Dockerfile.frontend
+    #     container_name: frontend_container
+    #     restart: always
+    #     volumes:
+    #         - ./LeetClone/src:/app/LeetClone/src
+    #     env_file:
+    #         - .env
+    #     ports:
+    #         - "5173:5173"
+    #     depends_on:
+    #         - backend
+            
     backend:
         build: 
             context: .
