--- a/LeetClone/package.json
+++ b/LeetClone/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host 0.0.0.0",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -24,6 +24,8 @@
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
+    "react-syntax-highlighter": "^15.6.6",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
