--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.1",
     "punycode": "^2.3.1",
+    "socket.io": "^4.8.1",
     "tr46": "^5.1.1",
     "uuid": "^11.1.0",
     "whatwg-url": "^14.2.0"
