made some changes in cors

--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhY
 
 SUPABASE_URL=https://osguruzlqofjeventeqh.supabase.co
 
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://www.leetclone.tech
 
 VITE_BACKEND_URL=http://localhost:4000
