--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -40,5 +40,6 @@ jobs:
                 username: ${{secrets.SSH_USER}}
                 key: ${{secrets.SSH_KEY}}
                 script: |
-                    docker compose pull
-                    docker compose up -d
+                    cd All-service/LeetClone
+                    sudo docker compose pull
+                    sudo docker compose up -d
